// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> renders Input component and hides its label with the hideLabel prop is true 1`] = `
<div
  className="Input"
>
  <input
    className="InputElement"
    name="testText"
    placeholder="This test is..."
    required={true}
    type="text"
    value=""
  />
</div>
`;

exports[`<Input /> renders Input component and is disabled when disabled prop is passed 1`] = `
<div
  className="Input"
>
  <label
    className="Label"
  >
    testText
  </label>
  <input
    className="InputElement"
    disabled={true}
    name="testText"
    placeholder="This test is..."
    required={true}
    type="text"
    value=""
  />
</div>
`;

exports[`<Input /> renders Input component with props passed in for elementType input number 1`] = `
<div
  className="Input"
>
  <label
    className="Label"
  >
    testNumber
  </label>
  <input
    className="InputElement"
    max={10000}
    min={0}
    name="testNumber"
    required={true}
    step={100}
    type="number"
    value={0}
  />
</div>
`;

exports[`<Input /> renders Input component with props passed in for elementType input text 1`] = `
<div
  className="Input"
>
  <label
    className="Label"
  >
    testText
  </label>
  <input
    className="InputElement"
    name="testText"
    placeholder="This test is..."
    required={true}
    type="text"
    value=""
  />
</div>
`;

exports[`<Input /> renders Input component with props passed in for elementType select 1`] = `
<div
  className="Input"
>
  <label
    className="Label"
  >
    testSelect
  </label>
  <select
    className="InputElement"
    name="testSelect"
    required={true}
    type="select"
    value=""
  >
    <option
      value="test1"
    >
      Test 1
    </option>
    <option
      value="test2"
    >
      Test 2
    </option>
    <option
      value="test3"
    >
      Test 3
    </option>
  </select>
</div>
`;

exports[`<Input /> renders Input component with props passed in for elementType textarea 1`] = `
<div
  className="Input"
>
  <label
    className="Label"
  >
    testTextarea
  </label>
  <textarea
    className="InputElement"
    maxLength={2000}
    minLength={5}
    name="testTextarea"
    placeholder="This test is..."
    required={true}
    value=""
  />
</div>
`;
